add snake, apple & style

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <!-- Create a grid -->
     <div class="grid"> 
         <!-- Grid = 10*10 = 100 divs -->
+        <div class="snake"></div>
         <div></div>
         <div></div>
         <div></div>
-        <div></div>
-        <div></div>
+        <div class="apple"></div>
         <div></div>
         <div></div>
         <div></div>
