--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Build Nokia 3310 Snake game</title>
     <meta name="description" content="Build a Snake game to Nokia 3310 phone in JavaScript">
     <link rel="stylesheet" href="./style.css">
+    <script src="./app.js"></script>
 </head>
 <body>
     
@@ -18,11 +19,11 @@
     <!-- Create a grid -->
     <div class="grid"> 
         <!-- Grid = 10*10 = 100 divs -->
-        <div class="snake"></div>
         <div></div>
         <div></div>
         <div></div>
-        <div class="apple"></div>
+        <div></div>
+        <div></div>
         <div></div>
         <div></div>
         <div></div>
@@ -120,7 +121,5 @@
         <div></div>
     </div>
 
-
-    <script src="./app.js"></script>
 </body>
 </html>
